# amind

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md  amind.conf.example  amind.sh  release.yml  vcpkg.json
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  hnsw_bench.cpp
cmake/: toolchain-aarch64.cmake
proto/: README.md  amind.proto
sdk/python/: README.md  pyproject.toml
sdk/python/amind/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
src/: CMakeLists.txt  main.cpp
src/async/: CMakeLists.txt  task_executor.cpp  task_executor.h  task_queue.cpp  task_queue.h
src/auth/: CMakeLists.txt  auth_manager.cpp  auth_manager.h
src/capture/: CMakeLists.txt  capture_pipeline.cpp  capture_pipeline.h  derived_extractor.cpp  derived_extractor.h
src/config/: CMakeLists.txt  v2_config.cpp  v2_config.h
src/conflict/: CMakeLists.txt  conflict_resolver.cpp  conflict_resolver.h
src/consolidation/: CMakeLists.txt  consolidation_worker.cpp  consolidation_worker.h
src/coordinator/: CMakeLists.txt  remove_coordinator.cpp  remove_coordinator.h
src/core/: CMakeLists.txt  crc32.h  file_utils.h  memory_record.cpp  memory_record.h  result.h  snowflake.cpp  snowflake.h  types.h
src/forget/: CMakeLists.txt  forget_engine.cpp  forget_engine.h  forget_log.cpp  forget_log.h
src/gate/: CMakeLists.txt  write_gate.cpp  write_gate.h
src/gate_log/: CMakeLists.txt  gate_log.cpp  gate_log.h
src/graph/: CMakeLists.txt  graph_store.cpp  graph_store.h  graph_wal.cpp  graph_wal.h
src/lineage/: CMakeLists.txt  lineage_index.cpp  lineage_index.h  lineage_wal.cpp  lineage_wal.h  propagator.cpp  propagator.h
src/lsm/: CMakeLists.txt  block.cpp  block.h  bloom_filter.cpp  bloom_filter.h  lsm_engine.cpp  lsm_engine.h  lsm_wal.cpp  lsm_wal.h  manifest.cpp  manifest.h  memtable.cpp  memtable.h  skip_list.h  sstable_format.h  sstable_reader.cpp  sstable_reader.h  sstable_writer.cpp  sstable_writer.h
src/memory/: CMakeLists.txt  backup.cpp  backup.h  memory_store.cpp  memory_store.h
src/metacognition/: CMakeLists.txt  metacognition.cpp  metacognition.h
src/observability/: CMakeLists.txt  memory_event.cpp  memory_event.h  memory_event_log.cpp  memory_event_log.h
src/provider/: CMakeLists.txt  anthropic_provider.cpp  anthropic_provider.h  connection_pool.cpp  connection_pool.h  fallback_provider.cpp  fallback_provider.h  ollama_provider.cpp  ollama_provider.h  openai_provider.cpp  openai_provider.h  provider.cpp  provider.h
src/reconcile/: CMakeLists.txt  reconciler.cpp  reconciler.h
src/retrieval/: CMakeLists.txt  retrieval.cpp  retrieval.h  staleness_filter.cpp  staleness_filter.h
src/sdk/: CMakeLists.txt  amind_client.cpp  amind_client.h
src/server/: CMakeLists.txt  config.cpp  config.h  engine.cpp  engine.h  rest_server.cpp  rest_server.h  variable_manager.cpp  variable_manager.h
src/session/: CMakeLists.txt  session_manager.cpp  session_manager.h  session_wal.cpp  session_wal.h
src/storage/: CMakeLists.txt  mmap_file.cpp  mmap_file.h  page_cache.cpp  page_cache.h  recovery.cpp  recovery.h  wal.cpp  wal.h
src/vector/: CMakeLists.txt  cold_tier.cpp  cold_tier.h  distance.h  hnsw_index.cpp  hnsw_index.h  recall_scorer.cpp  recall_scorer.h
src/web/: CMakeLists.txt  web_server.cpp  web_server.h
tests/: CMakeLists.txt  async_test.cpp  audit_fix_test.cpp  capture_test.cpp  conflict_resolver_test.cpp  consolidation_test.cpp  crash_consistency_test.cpp  derived_extractor_test.cpp  forget_engine_test.cpp  graph_store_test.cpp  hnsw_v2_test.cpp  lineage_test.cpp  lineage_wal_test.cpp  lsm_test.cpp  memory_event_log_test.cpp  memory_record_test.cpp  memory_store_test.cpp  metacognition_test.cpp  provider_test.cpp  remove_coordinator_test.cpp  retrieval_test.cpp  sdk_test.cpp  session_test.cpp  staleness_filter_test.cpp  tiered_memory_test.cpp  types_test.cpp  v2_config_test.cpp  v2_integration_test.cpp  write_gate_test.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/pages/: Dashboard.tsx  Events.tsx  ForgetLog.tsx  GateLog.tsx  Graph.tsx  Memories.tsx  MemoryDetail.tsx  Pipeline.tsx  RecallDebug.tsx  RecallStaleLog.tsx  Sessions.tsx  Settings.tsx  System.tsx
