add_subdirectory(core)
add_subdirectory(observability)
add_subdirectory(storage)
add_subdirectory(lsm)
add_subdirectory(vector)
add_subdirectory(graph)
add_subdirectory(lineage)
add_subdirectory(gate)
add_subdirectory(forget)
add_subdirectory(conflict)
add_subdirectory(reconcile)
add_subdirectory(coordinator)
add_subdirectory(consolidation)
add_subdirectory(config)
add_subdirectory(async)
add_subdirectory(memory)
add_subdirectory(auth)
add_subdirectory(provider)
add_subdirectory(capture)
add_subdirectory(retrieval)
add_subdirectory(metacognition)
add_subdirectory(session)
add_subdirectory(server)
add_subdirectory(sdk)
add_subdirectory(web)
