[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amind"
version = "0.1.0"
description = "Python SDK for amind — Agent's Mind memory engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["amind"]
